--- a/components/site/app/views/layouts/site/templates/nwaqui/application.html.haml
+++ b/components/site/app/views/layouts/site/templates/nwaqui/application.html.haml
@@ -22,7 +22,7 @@
   %body{class: (controller.action_name == 'show') ? 'page-right-sidebar' : 'home page-fullwidth' }
     .site
       = render 'layouts/site/templates/nwaqui/desktop/header'
-      = render 'layouts/site/templates/nwaqui/desktop/search'
+      = render 'layouts/site/templates/nwaqui/desktop/search' if "#{controller_name}/#{action_name}" != "properties/show"
       = yield
       = render 'layouts/site/templates/nwaqui/desktop/footer'
     #modal.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "modal", :role => "dialog", :tabindex => "-1", :style => 'z-index: 9999;'}
