--- a/components/site/app/views/site/lists/index.html.haml
+++ b/components/site/app/views/site/lists/index.html.haml
@@ -8,7 +8,7 @@
               .col-md-5{style: 'padding-top: 20px;'}
                 %h1.page-title
                   %b Listagem Imóveis
-                %h6= link_to "Voltar", :back
+                %h6= link_to "Voltar", :back, class: 'btn btn-primary'
               .col-md-3
                 %div
                   %span{style: 'color: #004869; font-size: 35px; font-weight: bold; margin-top: 10px'}= @properties.count
