--- a/components/admin/app/views/admin/properties/index.html.haml
+++ b/components/admin/app/views/admin/properties/index.html.haml
@@ -11,12 +11,14 @@
     .col-md-12
       .row
         = simple_form_for url_for, method: :get do |f|
-          .col-md-3
+          .col-md-2
             = f.input :by_customer, label: 'Cliente', as: :select, collection: Customer.all.order(:id), label_method: :label_name, input_html: { name: 'by_customer'}, include_blank: "Todos", selected: params[:by_customer]
-          .col-md-3
+          .col-md-2
             = f.input :by_situation, label: 'Situação', as: :select, collection: Property.situations.map {|k,v| [k.humanize, v]}, input_html: { name: 'by_situation'}, include_blank: "Todos", selected: params[:by_situation]
-          .col-md-3
+          .col-md-2
             = f.input :by_type, label: 'Tipo', as: :select, collection: Property.type_properties.map {|k,v| [k.humanize, v]}, input_html: { name: 'by_type'}, include_blank: "Todos", selected: params[:by_type]
+          .col-md-2
+            = f.input :by_commercial, label: 'Estado', as: :select, collection: Property.commercial_situations.map {|k,v| [k.humanize, v]}, input_html: { name: 'by_commercial'}, include_blank: "Todos", selected: params[:by_commercial]
           .col-md-3
             = f.submit "Filtrar lista", name: nil, class: 'btn btn-primary', style: "margin-top: 24px", data: { disable_with: t(:disable_with)}
 
@@ -30,6 +32,7 @@
             %th.col-sm-1 Cliente
             %th Cidade/Região
             %th Endereço
+            %th Empreendimento
             %th Situação
             %th Tipo
             %th Ativo?
@@ -41,6 +44,7 @@
               %td{style: 'width: 1%'}= property.customer_id
               %td{style: 'width: 10%'}= property.address.name if property.address.present?
               %td{style: 'width: 30%'}= property.address_name
+              %td{style: 'width: 10%'}= property.project
               %td{style: 'width: 10%'}= property.situation.humanize
               %td{style: 'width: 1%'}= property.type_property.humanize
               %td{style: 'width: 1%'}= property.status ? "Sim" : "Não"
