--- a/components/site/app/views/site/bookmarks/share.html.haml
+++ b/components/site/app/views/site/bookmarks/share.html.haml
@@ -3,6 +3,7 @@
     .container
       .recent-properties-inner
         .section-title{style: 'text-align: center'}
+          = link_to "Ir para o site", site.root_path, class: 'btn btn-primary'
           %br/
           %br/
           %br/
