--- a/components/admin/app/views/admin/customers/_form.html.haml
+++ b/components/admin/app/views/admin/customers/_form.html.haml
@@ -36,7 +36,7 @@
     .col-md-3
       = f.input :telephone, input_html: { placeholder: "somente números"}
     .col-md-3
-      = f.input :telephone_optional, input_html: { placeholder: "somente números"}
+      = f.input :telephone_optional, label: "Telefone 2", input_html: { placeholder: "somente números"}
     .col-md-3
       = f.input :celphone, input_html: { placeholder: "somente números"}
   %hr/
