--- a/components/site/app/views/site/properties/_show_telephone.html.haml
+++ b/components/site/app/views/site/properties/_show_telephone.html.haml
@@ -9,7 +9,7 @@
       %label Telefone
       %p= @property.customer.telephone ||= "não informado"
     .col-md-4
-      %label Telefone Secundário
+      %label Telefone 2
       %p= @property.customer.telephone_optional ||= "não informado"
     .col-md-4
       %label Celular
