--- a/components/site/app/views/site/properties/_show_desktop.html.haml
+++ b/components/site/app/views/site/properties/_show_desktop.html.haml
@@ -309,7 +309,11 @@
                   - if !@property.aluguel?
                     .detail-field.row
                       %span.col-xs-6.col-md-5.detail-field-label Valor (m²)
-                      %span.col-xs-6.col-md-7.detail-field-value= number_to_currency @property.calc_m2_value
+                      %span.col-xs-6.col-md-7.detail-field-value
+                        - if @property.calc_m2_value.to_i > 0
+                          = number_to_currency @property.calc_m2_value
+                        - else
+                          Sob consulta
                   - if !@property.lançamento?
                     .detail-field.row
                       %span.col-xs-6.col-md-5.detail-field-label Valor do condomínio
