--- a/components/client/app/views/layouts/client/_nav.html.haml
+++ b/components/client/app/views/layouts/client/_nav.html.haml
@@ -8,7 +8,7 @@
         %span.icon-bar
         %span.icon-bar
       %a.navbar-brand{:href => "#{client.root_path}"} 
-        = image_tag '/images/logo/logo.png', width: 135
+        = image_tag '/images/icon/logo_DFaqui_100px.png', width: 135
     / Collect the nav links, forms, and other content for toggling
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
       %ul.nav.navbar-nav
