--- a/components/site/app/views/site/properties/_show_desktop.html.haml
+++ b/components/site/app/views/site/properties/_show_desktop.html.haml
@@ -302,10 +302,18 @@
                     .detail-field.row
                       %span.col-xs-6.col-md-5.detail-field-label Valor
                       %span.col-xs-6.col-md-7.detail-field-value
-                        %span.amount= number_to_currency @property.value ||= "Sob consulta"
+                        %span.amount
+                          - if @property.value.to_i > 0
+                            = number_to_currency @property.value
+                          - else
+                            Sob consulta
                   .detail-field.row
                     %span.col-xs-6.col-md-5.detail-field-label Área (m²)
-                    %span.col-xs-6.col-md-7.detail-field-value= @property.area.to_i ||= "Sob consulta"
+                    %span.col-xs-6.col-md-7.detail-field-value=
+                      - if @property.area.to_i > 0
+                        @property.area.to_i
+                      - else 
+                        Sob consulta
                   - if !@property.aluguel?
                     .detail-field.row
                       %span.col-xs-6.col-md-5.detail-field-label Valor (m²)
