--- a/components/site/app/views/layouts/site/templates/nwaqui/desktop/_header.html.haml
+++ b/components/site/app/views/layouts/site/templates/nwaqui/desktop/_header.html.haml
@@ -9,5 +9,4 @@
             = link_to "<i class='glyphicon glyphicon-star'></i> Meus favoritos".html_safe, bookmarks_path, class: 'fav-button btn btn-primary'
             = link_to "<b>Encerrar acesso</b>".html_safe, logout_sessions_path, class: 'btn btn-danger'
           - else
-            = link_to "<i class='glyphicon glyphicon-star'></i> Acessar favoritos".html_safe, new_session_path,  remote: true, class: 'fav-button'
-            = link_to "Realizar cadastro", new_external_user_path, remote: true,  class: 'btn btn-primary'
+            = link_to "<i class='glyphicon glyphicon-star'></i> Acessar favoritos".html_safe, new_session_path,  remote: true, class: 'fav-button pull-right'
