--- a/components/site/app/views/layouts/site/templates/nwaqui/desktop/_header.html.haml
+++ b/components/site/app/views/layouts/site/templates/nwaqui/desktop/_header.html.haml
@@ -1,9 +1,11 @@
 %header.noo-header
   .main-nav-wrap.container
     .row
-      .col-md-2
+      .col-md-8
         = link_to image_tag('/images/logo/logo_full.png', size: '300x100'), site.root_path
-      .col-md-4.col-md-offset-6
+        = link_to image_tag('/images/icon/botoes_topo_segmentos_05.png', width: '82'), '#'
+        = link_to image_tag('/images/icon/botoes_topo_segmentos_07.png', width: '82'), '#'
+      .col-md-4
         .fav-buttons
           - if bookmark_user.present?
             = link_to "<i class='glyphicon glyphicon-star'></i> Meus favoritos".html_safe, bookmarks_path, class: 'fav-button btn btn-primary'
