--- a/components/site/app/views/layouts/site/templates/nwaqui/desktop/_header.html.haml
+++ b/components/site/app/views/layouts/site/templates/nwaqui/desktop/_header.html.haml
@@ -2,13 +2,12 @@
   .main-nav-wrap.container
     .row
       .col-md-8
-        = link_to image_tag('/images/logo/logo_full.png', size: '300x100'), site.root_path
-        = link_to image_tag('/images/icon/botoes_topo_segmentos_05.png', width: '82'), '#'
-        = link_to image_tag('/images/icon/botoes_topo_segmentos_07.png', width: '82'), '#'
+        = link_to image_tag('/images/icon/botoes_topo_segmentos_03.png', width: '300x100'), site.root_path
+        = link_to image_tag('/images/icon/botoes_topo_segmentos_05.png', width: '67'), '#'
+        = link_to image_tag('/images/icon/botoes_topo_segmentos_07.png', width: '67'), '#'
       .col-md-4
-        .fav-buttons
-          - if bookmark_user.present?
-            = link_to "<i class='glyphicon glyphicon-star'></i> Meus favoritos".html_safe, bookmarks_path, class: 'fav-button btn btn-primary'
-            = link_to "<b>Encerrar acesso</b>".html_safe, logout_sessions_path, class: 'btn btn-danger'
-          - else
-            = link_to "<i class='glyphicon glyphicon-star'></i> Acessar favoritos".html_safe, new_session_path,  remote: true, class: 'fav-button pull-right'
+        - if bookmark_user.present?
+          = link_to "<i class='glyphicon glyphicon-star'></i> Meus favoritos".html_safe, bookmarks_path, class: 'fav-button btn btn-primary'
+          = link_to "<b>Encerrar acesso</b>".html_safe, logout_sessions_path, class: 'btn btn-danger'
+        - else
+          = link_to image_tag('/images/icon/botoes_topo_segmentos_05_2.png', width: '67'), new_session_path,  remote: true, class: 'pull-right'
