--- a/components/site/app/views/layouts/site/templates/nwaqui/desktop/_header.html.haml
+++ b/components/site/app/views/layouts/site/templates/nwaqui/desktop/_header.html.haml
@@ -1,8 +1,8 @@
 %header.noo-header
   .main-nav-wrap.container
-    .row
+    .row{style: 'padding: 8px;'}
       .col-md-8
-        = link_to image_tag('/images/icon/botoes_topo_segmentos_03.png', width: '300x100'), site.root_path
+        = link_to image_tag('/images/icon/botoes_topo_segmentos_03.png', width: '300x100'), site.root_path, style: 'margin-right: 30px;'
         = link_to image_tag('/images/icon/botoes_topo_segmentos_05.png', width: '67'), '#'
         = link_to image_tag('/images/icon/botoes_topo_segmentos_07.png', width: '67'), '#'
       .col-md-4
