--- a/components/site/app/assets/stylesheets/site/custom.css
+++ b/components/site/app/assets/stylesheets/site/custom.css
@@ -3,6 +3,18 @@
   font-size: 18px;
 }
 
+.aluguel {
+  background-color: #229780;
+}
+
+.lançamento {
+  background-color: #74528a;
+}
+
+.venda {
+  background-color: #bf9632;
+}
+
 .gsearch-info-mobile {
   padding: 10px 0 !important;
 }
@@ -51,6 +63,10 @@
 
 .recent-properties .recent-properties-content .property-row .hentry .property-category {
   left: -22px !important;
+  padding: 0px !important;
+}
+
+.property-category div {
   padding: 5px !important;
 }
 .properties .hentry .property-featured .property-label{
