--- a/components/site/app/views/site/pages/index.html.haml
+++ b/components/site/app/views/site/pages/index.html.haml
@@ -16,12 +16,7 @@
           = link_to image_tag(button.image, size: '90x90'), button.link.to_s
         - else
           = link_to image_tag(button.image), button.link.to_s
-  %br/
-  %br/
-  %br/
-  %br/
-  %br/
-  %section#recent-.wrap.recent-properties
+  %section#recent-.wrap.recent-properties{style: 'padding-top: 90px'}
     .container
       .recent-properties-inner
         .section-title
