--- a/components/site/app/views/layouts/site/templates/nwaqui/mobile/_header.html.haml
+++ b/components/site/app/views/layouts/site/templates/nwaqui/mobile/_header.html.haml
@@ -1,12 +1,13 @@
-%header
+%header.noo-header
   .main-nav-wrap.container
-    .row
-      .col-xs-6{style: 'margin-top: 10px; margin-bottom: 14px;'}
-        = link_to image_tag('/images/logo/logo_full.png', size: '130x50'), site.root_path
-      .col-xs-6
-        .fav-buttons{style: 'font-size: 13px'}
-          - if bookmark_user.present?
-            = link_to "<i class='glyphicon glyphicon-star'></i> Meus favoritos".html_safe, bookmarks_path, class: 'fav-button btn btn-primary pull-right'
-          - else
-            = link_to "<i class='glyphicon glyphicon-star'></i> Acessar favoritos".html_safe, new_session_path,  remote: true, class: 'fav-button  pull-right'
-          
+    .row{style: 'padding: 8px;'}
+      .col-xs-10
+        = link_to image_tag('/images/icon/botoes_topo_segmentos_03.png', width: '150x100'), site.root_path, style: 'margin-right: 30px;'
+        = link_to image_tag('/images/icon/botoes_topo_segmentos_05.png', width: '37'), '#'
+        = link_to image_tag('/images/icon/botoes_topo_segmentos_07.png', width: '37'), '#'
+      .col-xs-2
+        - if bookmark_user.present?
+          = link_to "<i class='glyphicon glyphicon-star'></i> Meus favoritos".html_safe, bookmarks_path, class: 'fav-button btn btn-primary'
+          = link_to "<b>Encerrar acesso</b>".html_safe, logout_sessions_path, class: 'btn btn-danger'
+        - else
+          = link_to image_tag('/images/icon/botoes_topo_segmentos_05_2.png', width: '37'), new_session_path,  remote: true, class: 'pull-right'
