--- a/components/site/app/views/site/pages/_special_mobile.html.haml
+++ b/components/site/app/views/site/pages/_special_mobile.html.haml
@@ -1,25 +1,33 @@
-.property-row.col-xs-12
-  - current_domain.specials.includes(:property).all.order(:order).each do |special|
-    - if special.property.present?
-      .col-md-3.col-xs-12
-        %article.hentry.has-featured.mod1_home
-          .property-featured
-            %a.content-thumb{:href => "#{property_path(special.property)}"}
-              - if special.property.images.present?
-                %img.attachment-property-thumb.featured-thumb-home{:alt => "", :src => "#{special.property.images.order(:order).first.image_url}", width: '20'}}/
-              - else
-                %img.attachment-property-thumb.featured-thumb-home{:alt => "", :src => "https://nwaqui.s3.amazonaws.com/uploads/c0f5d31336b1d3c5c450cefebd261156.jpg", :width => '20'}/
-              %span.property-category.new_name
-                = "#{special.property.address_name} #{special.property.project_formated}"
-            .property-detail.mod-detail
-              .size
-                %span
-                  = special.property.area
-              .bedrooms
-                %span
-                  = special.property.rooms
-              .bathrooms
-                %span
-                  = special.property.suit
-              .size{class: "starfav_#{special.property.id}"}
-                = star_fav(special.property)
+.row
+  .col-md-12
+    .property-row
+      - current_domain.specials.includes(:property).all.order(:order).each do |special|
+        - if special.property.present?
+          .col-md-3.col-xs-12
+            %article.hentry.has-featured.mod1_home
+              .property-featured
+                %a.content-thumb{:href => "#{property_path(special.property)}"}
+                  - if special.property.images.present?
+                    %img.attachment-property-thumb.featured-thumb-home{:alt => "", :src => "#{special.property.images.order(:order).first.image_url}"}/
+                  - else
+                    %img.attachment-property-thumb.featured-thumb-home{:alt => "", :src => "https://nwaqui.s3.amazonaws.com/uploads/c0f5d31336b1d3c5c450cefebd261156.jpg"}/
+                  %span.property-category.new_name
+                    %div{class: special.property.commercial_situation, style:'text-align: center'}
+                      = "#{special.property.address_name_less}"
+                    %div{style:'text-align: center'}
+                      - if special.property.project.empty?
+                        = "#{special.property.project.humanize} Bloco #{special.property.block.name}  #{special.property.unit}"
+                      - else
+                        = special.property.project.humanize
+                .property-detail.mod-detail
+                  .size
+                    %span
+                      = special.property.area
+                  .bedrooms
+                    %span
+                      = special.property.rooms
+                  .bathrooms
+                    %span
+                      = special.property.suit
+                  .size{class: "starfav_#{special.property.id}"}
+                    = star_fav(special.property)
