--- a/components/site/app/assets/stylesheets/site/custom.css
+++ b/components/site/app/assets/stylesheets/site/custom.css
@@ -35,7 +35,6 @@
 .gsearch-action-mobile input {
   margin-left: 16px;
   height: 40px;
-  width: 80px;
 }
 .gsearch-wrap-mobile  {
   padding-top: 30px;
@@ -105,6 +104,9 @@ label {
   font-weight: bold;
 }
 
+.gsearch .gsearch-wrap .gsearch-content .gsearch-action {
+  padding: 0px 0px 40px !important;
+}
 img {
   max-width: none !important;
   height: none !important;
