--- a/components/site/app/views/layouts/site/application-less.html.haml
+++ b/components/site/app/views/layouts/site/application-less.html.haml
@@ -11,7 +11,10 @@
     = csrf_meta_tags
   %body{class: (controller.action_name == 'show') ? 'page-right-sidebar' : 'home page-fullwidth' }
     .site
-      = render "layouts/site/templates/#{domain?}/desktop/header"
+      - if touch_device?
+        = render "layouts/site/templates/#{domain?}/desktop/header"
+      - else
+        = render "layouts/site/templates/#{domain?}/mobile/header"
       = yield
     #modal.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "modal", :role => "dialog", :tabindex => "-1", :style => 'z-index: 9999;'}
       .modal-dialog
