--- a/components/site/app/views/layouts/site/application-less.html.haml
+++ b/components/site/app/views/layouts/site/application-less.html.haml
@@ -2,6 +2,9 @@
 %html
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
+    - if touch_device?
+      %meta{:content => "width=device-width, initial-scale=1", :name => "viewport"}/
+
     %title Nw Aqui
     = stylesheet_link_tag 'site/application', media: 'all'
     %link{:href => "http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,300italic,400italic", :rel => "stylesheet", :type => "text/css"}/
