--- a/components/site/app/views/layouts/site/templates/nwaqui/mobile.html.haml
+++ b/components/site/app/views/layouts/site/templates/nwaqui/mobile.html.haml
@@ -21,7 +21,7 @@
   %body{class: (controller.action_name == 'show') ? 'page-right-sidebar' : 'home page-fullwidth' }
     .site
       = render 'layouts/site/templates/nwaqui/mobile/header'
-      = render 'layouts/site/templates/nwaqui/mobile/search'
+      = render 'layouts/site/templates/nwaqui/mobile/search' if "#{controller_name}/#{action_name}" != "properties/show"
       = yield
       = render 'layouts/site/templates/nwaqui/mobile/footer'
     #modal.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "modal", :role => "dialog", :tabindex => "-1", :style => 'z-index: 9999;'}
