--- a/components/site/app/assets/stylesheets/site/custom.css
+++ b/components/site/app/assets/stylesheets/site/custom.css
@@ -42,8 +42,9 @@
 }
 .gsearch-mobile .form-control {
   font-size: 10px;
-  height: 40px !important;
+  height: 30px !important;
   background-color: #EFEFEF;
+  font-weight: bold;
 }
 
 .property .property-detail-content .detail-field { 
