--- a/components/site/app/views/site/pages/index.html.haml
+++ b/components/site/app/views/site/pages/index.html.haml
@@ -11,12 +11,12 @@
         - else
           %h3 Busca Exclusiva
     - current_domain.buttons.where(publish: true).order(:order).each do |button|
-      .col-md-2.col-xs-4
+      .col-md-2.col-xs-4{style: 'padding-left: 0px;'}
         - if touch_device?
           = link_to image_tag(button.image, size: '90x90'), button.link.to_s
         - else
           = link_to image_tag(button.image), button.link.to_s
-  %section#recent-.wrap.recent-properties{style: 'padding-top: 90px'}
+  %section#recent-.wrap.recent-properties{style: 'padding-top: 50px'}
     .container
       .recent-properties-inner
         .section-title
