--- a/components/site/app/views/site/properties/_show_mobile.html.haml
+++ b/components/site/app/views/site/properties/_show_mobile.html.haml
@@ -230,6 +230,23 @@
                       %b Descrição
                       %p
                         = @property.description
+                %hr/
+                .row
+                  .col-md-4.col-xs-4
+                    - if touch_device?
+                      = link_to image_tag("contact.png", width: 80), property_telephone_path(@property), remote: true
+                    - else
+                      = link_to image_tag("contact.png"), property_telephone_path(@property), remote: true
+                  .col-md-4.col-xs-4
+                    - if touch_device?
+                      = link_to image_tag("message.png", width: 80), new_property_message_path(@property), remote: true
+                    - else
+                      = link_to image_tag("message.png"), new_property_message_path(@property), remote: true
+                  .col-md-4.col-xs-4
+                    - if touch_device?
+                      = link_to image_tag("tour.png", width: 80), @property.block.tour_360.to_s, target: '_blank'
+                    - else
+                      = link_to image_tag("tour.png"), @property.block.tour_360.to_s, target: '_blank'
           .row
             .col-xs-12
               .property
